k8s/np/1-pod-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-test
  namespace: training9-bookinfo-dev
spec:
  containers:
  - name: pod-test
    image: oliverisaac/alpine-nettools:2023.04.07
    command:
    - sleep
    - "36000"
