k8s/np/2-networkpolicy-block-ns.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: block-external-namespace-traffic
  namespace: training[X]-bookinfo-dev
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress: []
