k8s/np/4-nonprd-prd.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: prd-deny-all
  namespace: training9-bookinfo-prd
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector: {}
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: uat-allow-dev
  namespace: training9-bookinfo-uat
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector: {}
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: training9-bookinfo-dev
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx
          
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: dev-allow-uat
  namespace: training9-bookinfo-dev
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector: {}
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: training9-bookinfo-uat
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx
