k8s/np/5-exercise-1.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: plc
  namespace: training9-dmz
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: training9-app
    # - from:
    #   - namespaceSelector:
    #       matchLabels:
    #         kubernetes.io/metadata.name: ingress-nginx
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: plc
  namespace: training9-app
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: training9-dmz
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: training9-db
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: plc
  namespace: training9-db
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
    - from:
      - podSelector: {}
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: training9-app
